
Fixed bug in character set conversion yaz_iconv. Some three byte UTF-8
sequences where not read correctly. Fix by Rustam Usmanov.

Updates to win/makefile which makes things compile happily with VS C 2005.

--- 2.1.12 2006/02/01 

Fixed bug in yaz_oi_update which used incorrect value for categoryValue.

In ZOOM socket code, use select instead of poll on MacOSX.

ZOOM-C now support client-side compilation of CQL into RPN that is
sent to the server, enabling CQL to be used against all Z39.50
servers.  Use ZOOM_query_cql2rpn() to set the compiled CQL into a
ZOOM_query object, and submit it using ZOOM_connection_search().
The CQL-to-RPN translation uses a configuration file, the name of
which must be specified in the Connection's "cqlfile" option.

ZOOM-C also support CQL scanning, via the new ZOOM_connection_scan1()
function, which takes as its start-term parameter a ZOOM_query object
(which may have had either CQL or RPN set into it).


--- 2.1.10 2005/11/29 

Added ZiNG Update Support. New codecs are defined in srw.h. Extended the
GFS to support this as well. Backend handler, bend_srw_update, does the
update work. Code contributed by Ko van der Sloot.

Allow retrieval of Search Result-1 information in ZOOM by the use of
options that are attached to a result set. ZOOM documentation updated
accordingly.

Fixed bug #416: First/second comb characters not handled in the MARC-8 to
UTF-8 conversion. Patch by Raj Patel.

Added option -m to GFS to control formatting of timestamps in log file.

Added 'exit' as synonym for 'quit' in yaz-client

Added support for specifying SRW resultSetId + resultSetIdleTime in a
Generic Frontend Server's search handler. Refer to include/yaz/backend.h
for the new members. Patch by Ko van der Sloot.

Added support for SRU POST. It is supported for content-type
application/x-www-form-urlencoded only. Patch by Ko van der Sloot.

Do not build the separate Multi-threaded (MT) library libyazthread.la.